--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
                         </ul>
 
                     </li>
-                    <li><a href="/">Shop</a></li>
+                    <li><a href="shop.html">Shop</a></li>
                     <li><a href="/">Catalogue</a></li>
 
 
