--- a/shopper.html
+++ b/shopper.html
@@ -110,15 +110,15 @@
                         <label for="small">small</label>
                     </div>
                     <div>
-                        <input type="radio" name="Medium" id="">
+                        <input type="radio" name="small" id="">
                         <label for="Medium">Medium</label>
                     </div>
                     <div>
-                        <input type="radio" name="Large" id="">
+                        <input type="radio" name="small" id="">
                         <label for="Large">Large</label>
                     </div>
                     <div>
-                        <input type="radio" name="Extra Large" id="">
+                        <input type="radio" name="small" id="">
                         <label for="Extra Large">Extra Large</label>
                     </div>
                 </div>
