--- a/thanks.html
+++ b/thanks.html
@@ -18,7 +18,7 @@
                     <input type="search" placeholder="Search">
                 </div>
                 <div>
-                    <a href="" class="logo">
+                    <a href="index.html" class="logo">
                         El-Senosy Store
                     </a>
                 </div>
